Products.CMFUid Changelog
=========================

2.2.0 (unreleased)
------------------

- Add missing utility registration for IUniqueIdHandler.  See
  https://bugs.launchpad.net/bugs/299058 .

- UniqueIdHandlerTool: Call the reindexObject attribute of the object
  getting a uid, rather than portal_catalog's reindexObject.  This is
  needed to properly handle objects like the portal itself which shouldn't
  get catalogued ever.

- Removed redundant and unexpected code to auto-create catalog index and
  column for the UID handler tool. The index and column are already
  created by the default CMFUid GenericSetup profile.
  (http://www.zope.org/Collectors/CMF/472)

2.1.2-beta (2008-08-26)
------------------

- completed devolution from monolithic CMF package into its component
  products that are distributed as eggs from PyPI.

- testing: Base UidEventZCMLLayer on ZopeTestCase.layer.ZopeLite.

- UniqueIdHandlerTool: Use %r instead of %s in error messages, so
  we don't trip over non-ASCII representations (e.g. File and Image).


2.1.1 (2008-01-06)
------------------

- no changes


2.1.1-beta(2007-12/29)
----------------------

- Testing: Derive test layers from ZopeLite layer if available.


2.1.0 (2007-08-08)
------------------

- Fixed all componentregistry.xml files to use plain object paths and strip
  and slashes. GenericSetup does only support registering objects which are
  in the site root.


2.1.0-beta2 (2007-07-12)
------------------------

- moved the Zope dependency to version 2.10.4

- Remove antique usage of marker attributes in favor of interfaces,
  leaving BBB behind for places potentially affecting third-party code.
  (http://www.zope.org/Collectors/CMF/440)

- Add POST-only protections to security critical methods.
  http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-0240)

- UniqueIdAnnotationTool: Annotation handling has been switched
  from triggering it through old-style manage_*-methods to using